Fix mobile button cropping

--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ body {
     border-color: #ffffff;
     border-width: 3px;
     border-style:solid;
-    font-size: x-large;
-    font-weight: 700    ;
+    font-size: large;
+    font-weight: 700;
 }
 
 .bold {
